change z-index to avoid map in front of modal

--- a/src/CalculatorBundle/Resources/public/css/dashboard.scss
+++ b/src/CalculatorBundle/Resources/public/css/dashboard.scss
@@ -1,7 +1,7 @@
 .stickyHeader {
   position: fixed;
   width: 100%;
-  z-index: 100;
+  z-index: 1040;
   top: 0;
 }
 
